# pytorch_models_3D

./: README.md  __init__.py  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile
losses/: __init__.py  classification_losses.py  experimental.py  loss.py  new_segmentation_losses.py  object_dice.py  segmentation_losses.py
losses/segmentation_losses/: base_modules.py  ce.py  dice.py  jaccard.py  lovasz.py  mcc.py  tversky.py
metrics/: plot.py  torch.py  torch_metrics.py
models/: models.py
models/classification/: base_blocks.py  base_models.py  densenet.py  efficientnet.py  resnet.py  resnext.py  utils.py
models/segmentation/: base_model.py  base_modules.py  deeplab.py  duat.py  fpn.py  linknet.py  main.py  manet.py  pan.py  pspnet.py  smp.py  unet.py  unetplusplus.py
pytorch_models_3D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pytorch_models_3D/losses/: classification_losses.py  utils.py
pytorch_models_3D/losses/segmentation_losses/: base_modules.py  ce.py  dice.py  lovasz.py  tversky.py
pytorch_models_3D/metrics/: __init__.py  functional.py  numpy_metrics.py  old_metrics.py
pytorch_models_3D/models/classification/: wide_resnet.py
pytorch_models_3D/models/segmentation/: base_model.py  base_modules.py  fpn.py  linknet.py  unet.py  unetplusplus.py
