[metadata]
name = pytorch_models_3D
version = 0.1.0
author = Nikita Trotsenko
url = https://github.com/trotsenko/pytorch_models_3D
description = PyTorch models for 3D image processing
long_description = file: README.md

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.package_data]
pytorch_models_3D =
    losses/*
    metrics/*
    models/*


* = README.md
